--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
